--- a/.env.testing
+++ b/.env.testing
@@ -7,17 +7,18 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST={{ .Env._DB_HOST }}
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE={{ .Env._TEST_DB_DATABASE }}
-DB_USERNAME={{ .Env._DB_USERNAME }}
-DB_PASSWORD={{ .Env._DB_PASSWORD }}
+DB_DATABASE=code_micro_videos_test
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+FILESYSTEM_DRIVER=video_local
 
 REDIS_HOST=redis
 REDIS_PASSWORD=null
@@ -42,3 +43,16 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLOUD_PROJECT_ID=infra-signifier-249921
+GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
+GOOGLE_CLOUD_STORAGE_BUCKET=code-micro-videos
+GOOGLE_CLOUD_STORAGE_API_URI=https://storage.cloud.google.com/code-micro-videos
+
+TESTING_PROD=false
+
+APP_CONFIG_CACHE=bootstrap/cache/config.phpunit.php
+APP_SERVICES_CACHE=bootstrap/cache/services.phpunit.php
+APP_PACKAGES_CACHE=bootstrap/cache/packages.phpunit.php
+APP_ROUTES_CACHE=bootstrap/cache/routes.phpunit.php
+APP_EVENTS_CACHE=bootstrap/cache/events.phpunit.php
